Provide some starting aliases

--- a/known_aliases.json
+++ b/known_aliases.json
@@ -1,1 +1,13 @@
-{}
+{
+"dfg": "Deutsch-Franz. Garten DFG Nord, Saarbr\u00fccken",
+"dudu": "Dudoplatz, Dudweiler Saarbr\u00fccken",
+"hbf": "Saarbr\u00fccken Hbf",
+"hdz": "Haus der Zukunft, Saarbr\u00fccken",
+"heim": "Heimgarten, Saarbr\u00fccken",
+"jo": "Johanneskirche, Saarbr\u00fccken",
+"rathaus": "Rathaus, Saarbr\u00fccken"
+"unib": "Universit\u00e4t Busterminal, Saarbr\u00fccken",
+"unic": "Universit\u00e4t Campus, Saarbr\u00fccken",
+"unim": "Universit\u00e4t Mensa, Saarbr\u00fccken",
+"univ": "Universit\u00e4t Botanischer Garten, Saarbr\u00fccken"
+}
