Touch up alias naming

--- a/known_aliases.json
+++ b/known_aliases.json
@@ -1,10 +1,10 @@
 {
-"dfg": "Deutsch-Franz. Garten DFG Nord, Saarbr\u00fccken",
+"dfgnord": "Deutsch-Franz. Garten DFG Nord, Saarbr\u00fccken",
 "dudu": "Dudoplatz, Dudweiler Saarbr\u00fccken",
-"hbf": "Saarbr\u00fccken Hbf",
-"hdz": "Haus der Zukunft, Saarbr\u00fccken",
-"heim": "Heimgarten, Saarbr\u00fccken",
-"jo": "Johanneskirche, Saarbr\u00fccken",
+"hbfsb": "Saarbr\u00fccken Hbf",
+"hdzukunft": "Haus der Zukunft, Saarbr\u00fccken",
+"heimgarten": "Heimgarten, Saarbr\u00fccken",
+"johanneskirche": "Johanneskirche, Saarbr\u00fccken",
 "rathaus": "Rathaus, Saarbr\u00fccken"
 "unib": "Universit\u00e4t Busterminal, Saarbr\u00fccken",
 "unic": "Universit\u00e4t Campus, Saarbr\u00fccken",
